--- a/Customer_churn_prediction_model (1).ipynb
+++ b/Customer_churn_prediction_model (1).ipynb
@@ -3378,7 +3378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Correlation Heatmap for mumerical columns"
+        "Correlation Heatmap for numerical columns"
       ],
       "metadata": {
         "id": "vW3MNOfvo5c9"
